[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61.0", "wheel>=0.37.1"]

[project]
name = "mko_gloader"
version = "0.0.1"
authors = [
    { name = "mko", email = "manicko@yandex.ru" },
]

description = "Tool to load data to GDrive."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    'google-api-python-client',
    'google_auth_oauthlib',
    'python-magic-bin',
    'oauthlib'
]

classifiers = [
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/manicko/mko_gloader"
Issues = "https://github.com/manicko/mko_gloader"


[tool.setuptools]
# https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html
platforms = ["Linux", "Windows"]
include-package-data = false

[tool.setuptools.packages.find]
include = ["mko_gloader", "mko_gloader.*"]
namespaces = false